--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer class="bg-gray-800 text-white mt-auto ">
+    <div class="container mx-auto flex justify-center items-center">
+      <ul class="flex-grow flex justify-center space-x-4">
+        <li><a href="#" class="hover:text-gray-300">Terms of Service</a></li>
+        <li><a href="#" class="hover:text-gray-300">Privacy Policy</a></li>
+        <li><a href="#" class="hover:text-gray-300">FAQ</a></li>
+        <li><a href="#" class="hover:text-gray-300">Contact Us</a></li>
+      </ul>
+    </div>
+</footer>
+
+  
