--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
       <h1 class="text-2xl font-bold mb-8">Dashboard</h1>
       
       <div class="my-5 mx-auto w-fit">
-        <button class="border-4 rounded-lg border-gray-600 bg-slate-300 py-2 px-12 text-lg font-bold ease-in-out duration-200 hover:bg-gray-400 hover:border-gray-800 hover:text-xl">Add Invoices</button>
+        <a [routerLink]="['/addInvoice']" routerLinkActive="router-link-active" ><button class="border-4 rounded-lg border-gray-600 bg-slate-300 py-2 px-12 text-lg font-bold ease-in-out duration-200 hover:bg-gray-400 hover:border-gray-800 hover:text-xl">Add Invoices</button></a> 
       </div>
 
       <div class="flex mb-8">
