--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,16 +11,15 @@
       </nav>
     </div>
 
+
     <div class="flex-grow p-8">
       <h1 class="text-2xl font-bold mb-8">Dashboard</h1>
-      
-      <div class="my-5 mx-auto w-fit">
-        <a [routerLink]="['/addInvoice']" routerLinkActive="router-link-active" ><button class="border-4 rounded-lg border-gray-600 bg-slate-300 py-2 px-12 text-lg font-bold ease-in-out duration-200 hover:bg-gray-400 hover:border-gray-800 hover:text-xl">Add Invoices</button></a> 
-      </div>
+
+      <a [routerLink]="['/addInvoice']" routerLinkActive="router-link-active" ><button class="bg-white text-gray-800 font-bold py-2 px-4 rounded shadow my-2">Add invoice</button></a>
 
       <div class="flex mb-8">
         <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Invoices
-          <div class="text-sm font-normal">555</div>
+          <div class="text-sm font-normal"> {{totalInvoices}} </div>
         </div>
         <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Payed
           <div class="text-sm font-normal">33</div>
@@ -31,9 +30,9 @@
       </div>
 
       <div class="flex mb-8">
-        <div class="w-1/2 p-4 bg-white rounded shadow-lg mr-4">Your Invoices
+        <div class="w-1/2 p-4 bg-white rounded shadow-lg mr-4"><p class="font-bold text-lg" >5 Latest Invoices</p>
         </div>
-        <div class="w-1/2 p-4 bg-white rounded shadow-lg">Panel 5</div>
+        <div class="w-1/2 p-4 bg-white rounded shadow-lg"><p class="font-bold text-lg">Panel 5</p></div>
       </div>
 
     </div>
