cout paid and unpaid

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,11 +21,11 @@
         <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Invoices
           <div class="text-sm font-normal"> {{totalInvoices}} </div>
         </div>
-        <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Payed
-          <div class="text-sm font-normal">33</div>
+        <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Paid
+          <div class="text-sm font-normal"> {{totalPayed}}  </div>
         </div>
-        <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total To Pay
-          <div class="text-sm font-normal">44</div>
+        <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Unpaid
+          <div class="text-sm font-normal"> {{totalUnpayed}} </div>
         </div>
       </div>
 
