--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,24 +1,19 @@
-<div class="max-w-2xl mx-auto">
-    <form class="grid grid-cols-2 gap-6">
-      <div>
-        <label for="first-name" class="block font-medium text-gray-700">First name</label>
-        <input type="text" name="first-name" id="first-name" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50">
-      </div>
-      <div>
-        <label for="last-name" class="block font-medium text-gray-700">Last name</label>
-        <input type="text" name="last-name" id="last-name" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50">
-      </div>
-      <div class="col-span-2">
-        <label for="email" class="block font-medium text-gray-700">Email address</label>
-        <input type="email" name="email" id="email" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50">
-      </div>
-      <div class="col-span-2">
-        <label for="message" class="block font-medium text-gray-700">Message</label>
-        <textarea name="message" id="message" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"></textarea>
-      </div>
-      <div class="col-span-2">
-        <button type="submit" class="inline-flex items-center px-4 py-2 bg-indigo-600 border border-transparent rounded-md font-semibold text-white tracking-widest hover:bg-indigo-700 active:bg-indigo-900 focus:outline-none focus:border-indigo-900 focus:ring focus:ring-indigo-300 disabled:opacity-25 transition ease-in-out duration-150">Submit</button>
-      </div>
-    </form>
-  </div>
-  
+<div class="max-w-2xl mx-auto mt-20">
+  <form class="grid grid-cols-2 gap-6">
+    <div class="col-span-2">
+      <label for="email" class="block font-medium text-gray-700">Prijs totaal</label>
+      <input [(ngModel)]="invoiceData.amount" type="number" name="email" id="email" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 border-2 border-gray-400">
+    </div>
+    <div class="col-span-2">
+      <label for="beschrijving" class="block font-medium text-gray-700">Beschrijving</label>
+      <textarea [(ngModel)]="invoiceData.beschrijving" name="beschrijving" id="beschrijving" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 border-2 border-gray-400"></textarea>
+    </div>
+    <div class="col-span-2">
+    <button type="submit" (click)="submitInvoiceForm()" class="inline-flex items-center px-4 py-2 bg-indigo-600 border border-transparent rounded-md font-semibold text-white tracking-widest hover:bg-indigo-700 active:bg-indigo-900 focus:outline-none focus:border-indigo-900 focus:ring focus:ring-indigo-300 disabled:opacity-25 transition ease-in-out duration-150">Voeg invoice toe</button>
+    </div>
+    <div class="col-span-2">
+      <div *ngIf="error" class="border-2 border-green-500 rounded-sm mx-auto my-2 w-2/5 rounded-sm text-center">Succes invoice has been Added</div>
+      <div *ngIf="error" class="border-2 border-red-500 mx-auto my-2 w-2/5 rounded-sm text-center">ERROR: </div>
+    </div>
+  </form>
+</div>
