--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,6 +16,7 @@
       <h1 class="text-2xl font-bold mb-8">Dashboard</h1>
 
       <a [routerLink]="['/addInvoice']" routerLinkActive="router-link-active" ><button class="bg-white text-gray-800 font-bold py-2 px-4 rounded shadow my-2">Add invoice</button></a>
+      <a [routerLink]="['/manageInvoice']" routerLinkActive="router-link-active" ><button class="bg-white text-gray-800 font-bold py-2 px-4 rounded shadow m-2">Manage invoices</button></a>
 
       <div class="flex mb-8">
         <div class="w-1/3 p-4 bg-white rounded shadow-lg mr-4 text-lg font-bold">Total Invoices
