--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
     <nav class="container mx-auto flex justify-center items-center">
       <a href="#" class="text-2xl font-bold flex-shrink-0"><img src="assets/logo.png" width="60" height="60" ></a>
       <ul class="flex-grow flex justify-center space-x-4">
-        <li><a href="#" class="hover:text-gray-300">Dashboard</a></li>
+        <li><a [routerLink]="['/']" href="#" class="hover:text-gray-300">Dashboard</a></li>
         <li><a href="#" class="hover:text-gray-300">Manage</a></li>
         <li><a href="#" class="hover:text-gray-300">Contact</a></li>
-        <li><a href="#" class="hover:text-gray-300"></a></li>
+        <li><a [routerLink]="['/register']" routerLinkActive="router-link-active"  class="hover:text-gray-300">Register</a></li>
       </ul>
       <div class="flex-shrink-0">
         <input type="text" class="px-2 py-0.5 rounded-md focus:outline-none focus:ring focus:border-blue-300" placeholder="Search...">
@@ -14,5 +14,5 @@
         </button>
       </div>
     </nav>
-  </header>
+  </header> 
   
