--- a/src/app/invoice-card/invoice-card.component.html
+++ b/src/app/invoice-card/invoice-card.component.html
@@ -8,9 +8,17 @@
         <div class="" *ngIf="invoice.paid === true"> ✔️ </div>
         <div class="" *ngIf="invoice.paid === false"> ❌ </div>
         <div class="col-span-2">
-            <button class="border-2 border-red-600 bg-red-200 px-6 py-1 rounded-lg font-semibold">Delete</button>        
+            <button (click)="openModal(invoice.id)" class="border-2 border-red-600 bg-red-200 px-6 py-1 rounded-lg font-semibold">Delete</button>        
             <button class="border-2 border-yellow-400 bg-yellow-100 px-6 py-1 mx-3 rounded-lg font-semibold">Edit</button>
         </div>
         
     </div>  
 </div>    
+<app-delete-modal *ngIf="showModal">
+    <h1 class="text-2xl font-bold">Delete Invoice?</h1>
+    <h2>Are you shure you want to delete this invoice?</h2>
+    <div class="grid grid-cols-2 gap-2 m-2">
+        <button (click)="confirmDelete()" class="border-2 border-red-800 bg-red-500 rounded-lg px-4 py-1 text-white font-semibold cursor-pointer">Yes</button>
+        <button (click)="closeModal()" class="border-2 border-gray-600 bg-gray-500 rounded-lg px-4 py-1 text-black font-semibold cursor-pointer">No</button>
+    </div>
+</app-delete-modal>
