--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,8 @@
     <nav class="container mx-auto flex justify-center items-center">
       <a href="#" class="text-2xl font-bold flex-shrink-0"><img src="assets/logo.png" width="60" height="60" ></a>
       <ul class="flex-grow flex justify-center space-x-4">
-        <li><a [routerLink]="['/']" href="#" class="hover:text-gray-300">Dashboard</a></li>
-        <li><a href="#" class="hover:text-gray-300">Manage</a></li>
+        <li><a [routerLink]="['/']" class="hover:text-gray-300">Dashboard</a></li>
+        <li><a [routerLink]="['/manageInvoice']" routerLinkActive="router-link-active" class="hover:text-gray-300">Manage</a></li>
         <li><a href="#" class="hover:text-gray-300">Contact</a></li>
         <li><a [routerLink]="['/register']" routerLinkActive="router-link-active"  class="hover:text-gray-300">Register</a></li>
       </ul>
