--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,4 @@
 <div class="flex h-screen bg-gray-200">
-    <div class="flex flex-col w-64 bg-white shadow-lg">
-      <div class="flex items-center justify-center h-16 border-b">
-            <h2>Financer</h2>
-      </div>
-      <nav class="flex-grow px-4 py-8">
-        <a href="#" class="block mb-4 font-semibold text-gray-600 hover:text-gray-800">Dashboard</a>
-        <a href="#" class="block mb-4 font-semibold text-gray-600 hover:text-gray-800">Settings</a>
-        <a href="#" class="block mb-4 font-semibold text-gray-600 hover:text-gray-800">Profile</a>
-        <a href="#" class="block mb-4 font-semibold text-gray-600 hover:text-gray-800">Help</a>
-      </nav>
-    </div>
 
 
     <div class="flex-grow p-8">
@@ -31,7 +20,7 @@
       </div>
 
       <div class="flex mb-8">
-        <div class="w-full p-4 bg-white rounded shadow-lg mr-4"><p class="font-bold text-2xl mb-6 " >5 Latest Invoices</p>      
+        <div class="w-full p-4 bg-white rounded shadow-lg mr-4"><p class="font-bold text-2xl mb-6 " >5 Oldest Invoices</p>      
           <div class="grid grid-cols-4 gap-4 border-b-2 border-black mb-4 p-1 text-center text-xl font-bold ">
             <div class="">Invoice Number</div>
             <div class="">Description</div>
