--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -6,13 +6,15 @@
     </div>
     <div class="col-span-2">
       <label for="beschrijving" class="block font-medium text-gray-700">Beschrijving</label>
-      <textarea [(ngModel)]="invoiceData.beschrijving" name="beschrijving" id="beschrijving" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 border-2 border-gray-400"></textarea>
+      <textarea [(ngModel)]="invoiceData.beschrijving" placeholder="Beschrijving van de invoice" name="beschrijving" id="beschrijving" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 border-2 border-gray-400"></textarea>
     </div>
     <div class="col-span-2">
     <button type="submit" (click)="submitInvoiceForm()" class="inline-flex items-center px-4 py-2 bg-indigo-600 border border-transparent rounded-md font-semibold text-white tracking-widest hover:bg-indigo-700 active:bg-indigo-900 focus:outline-none focus:border-indigo-900 focus:ring focus:ring-indigo-300 disabled:opacity-25 transition ease-in-out duration-150">Voeg invoice toe</button>
+    <button type="submit" [routerLink]="['']" routerLinkActive="router-link-active"  class="inline-flex items-center px-4 py-2 bg-indigo-600 border border-transparent rounded-md font-semibold text-white tracking-widest hover:bg-indigo-700 active:bg-indigo-900 focus:outline-none focus:border-indigo-900 focus:ring focus:ring-indigo-300 disabled:opacity-25 transition ease-in-out duration-150 ml-2">Go Terug</button>
+    <button type="submit" [routerLink]="['/manageInvoice']" routerLinkActive="router-link-active"  class="inline-flex items-center px-4 py-2 bg-indigo-600 border border-transparent rounded-md font-semibold text-white tracking-widest hover:bg-indigo-700 active:bg-indigo-900 focus:outline-none focus:border-indigo-900 focus:ring focus:ring-indigo-300 disabled:opacity-25 transition ease-in-out duration-150 ml-2">Manage invoices</button>
     </div>
     <div class="col-span-2">
-      <div *ngIf="error" class="border-2 border-green-500 rounded-sm mx-auto my-2 w-2/5 rounded-sm text-center">Succes invoice has been Added</div>
+      <div *ngIf="succes" class="p-2 border-4 border-green-500 bg-green-300 mx-auto my-2 w-2/5 rounded-lg text-center">Succes invoice has been Added</div>
       <div *ngIf="error" class="border-2 border-red-500 mx-auto my-2 w-2/5 rounded-sm text-center">ERROR: </div>
     </div>
   </form>
