--- a/src/app/manage-invoice/manage-invoice.component.html
+++ b/src/app/manage-invoice/manage-invoice.component.html
@@ -1,5 +1,5 @@
 <div class="flex mb-8">
-    <div class="w-full p-4 bg-white rounded shadow-lg mr-4"><p class="font-bold text-2xl mb-6 " >Your invoices - USER NAME</p>      
+    <div class="w-full p-4 bg-white rounded shadow-lg mr-4"><p class="font-bold text-2xl mb-6 " >Your invoices</p>    
       <div class="grid grid-cols-6 gap-6 border-b-2 border-black mb-4 p-1 text-center text-xl font-bold ">
         <div class="">Invoice Number</div>
         <div class="">Description</div>
